--- a/sass_scss/7-nested_deeper.scss
+++ b/sass_scss/7-nested_deeper.scss
@@ -3,7 +3,7 @@ body {
 
     h1 {
         font-size: 16px;
-        .smaller {
+        &.smaller {
             font-size: 12px;
         }
     }
