--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -370,7 +370,13 @@
   .section-hero .section-inner {
     padding: 10rem 40rem 2rem 0;
   }
-  
+
+  /* Section Latest news 
+      ============================= */
+  .section-latest-news {
+    flex-direction: row-reverse;
+  }
+
   /*** 4. CARD ***/
   
   /* Card (all styles)
@@ -380,10 +386,7 @@
     color: var(--color-primary);
   }
 
-  /* Section Latest news ============================= */
-  .section-latest-news {
-    flex-direction: row-reverse;
-  }
+
   
   /* Card WORK
       ============================= */
