--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -373,7 +373,7 @@
 
   /* Section Latest news 
       ============================= */
-  .section-latest-news {
+  .section-latest-news .row {
     flex-direction: row-reverse;
   }
 
