--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -672,12 +672,13 @@
     opacity: 0;
   }
 
-  .card-work .card-title a:focus {
+  .card-work .card-title a:focus,
+  .card-work:hover .card-title a {
     opacity: 1;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
   }
-  
+
   .card-work .card-title a::after {
     position: absolute;
     top: 0;
