--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -725,7 +725,7 @@
     background-color: var(--color-white);
   }
 
-  .focus-group:focus-within {
+  .form-group:focus-within {
     background-color: var(--color-light-grey);
     transition: .3s;
   }
